--- a/BlazorServerCleanArchitecture.Application/BlazorServerCleanArchitecture.Application.csproj
+++ b/BlazorServerCleanArchitecture.Application/BlazorServerCleanArchitecture.Application.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Features\" />
+  </ItemGroup>
+
 </Project>
