--- a/BlazorServerCleanArchitecture.Persistence/BlazorServerCleanArchitecture.Persistence.csproj
+++ b/BlazorServerCleanArchitecture.Persistence/BlazorServerCleanArchitecture.Persistence.csproj
@@ -14,10 +14,10 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlazorServerCleanArchitecture.Application\BlazorServerCleanArchitecture.Application.csproj" />
     <ProjectReference Include="..\BlazorServerCleanArchitecture.Domain\BlazorServerCleanArchitecture.Domain.csproj" />
   </ItemGroup>
 
