--- a/BlazorServerCleanArchitecture.WebUI/BlazorServerCleanArchitecture.WebUI.csproj
+++ b/BlazorServerCleanArchitecture.WebUI/BlazorServerCleanArchitecture.WebUI.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="MediatR" Version="12.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorServerCleanArchitecture.Application\BlazorServerCleanArchitecture.Application.csproj" />
+    <ProjectReference Include="..\BlazorServerCleanArchitecture.Persistence\BlazorServerCleanArchitecture.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
